syntax = "proto3";
package auth;
option go_package = "./internal/pb";

service AuthService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {}
}

//SignUp
message SignUpRequest {
  string phoneNumber = 1;
  string password = 2;
  string name = 3;
  string surname = 4;
  bool gender = 5;
  string dateOfBirth = 6;
  string city = 7;
}

message SignUpResponse {
  int64 status = 1;
  string error = 2;
}